--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,11 @@
-FROM node:20
+FROM node:22-alpine
 
 WORKDIR /app
 
-COPY . .
-
+COPY package*.json ./
 RUN npm install
 
-ENV NODE_ENV=production
+COPY . .
 
 EXPOSE 7001
 
